Update proc2 README.md